package app.cinematch.model;
public record Movie(int id, String title, String overview, String releaseYear, String posterPath) {}
