package app.cinematch.model;
public record Recommendation(String title, String reason, String platform, String posterUrl) {}
