```mermaid
classDiagram
    class App{
      +main(String[]): void
    }
    class MovieRecommenderService{
      -OllamaClient ollama
      -TMDBClient tmdb
      -PlatformResolver platformResolver
      -Memory memory
      +recommendFromLike(String): Recommendation
      +feedback(String, boolean): void
    }
    class OllamaClient{
      +chat(String system, String user): String
    }
    class TMDBClient{
      +searchMovieId(String title): Integer?
      +findSimilar(int movieId): Movie?
    }
    class PlatformResolver{
      +guessPlatform(String title): String
    }
    class Memory{
      +addLike(String)
      +addDislike(String)
      +getLikes(): List~String~
      +getDislikes(): List~String~
    }
    class Recommendation{
      String title
      String reason
      String platform
    }
    class Movie{
      String title
      String overview
      String year
    }

    App --> MovieRecommenderService
    MovieRecommenderService --> OllamaClient
    MovieRecommenderService --> TMDBClient
    MovieRecommenderService --> PlatformResolver
    MovieRecommenderService --> Memory
```